--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
@@ -152,7 +152,7 @@
                                     <h5 class="modal-title" id="exampleModalLabel">Please input below CMS Details</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
-                                <form id="cms-form" asp-action="Admin_Skills" asp-controller="Home" method="post">
+                                <form id="cms-form" asp-action="Admin_AddSkills" asp-controller="Home" method="post">
                                     <div class="modal-body">
 
                                         <div>
@@ -167,7 +167,15 @@
 
                                         <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
-                                            <input asp-for="Status" id="Status" type="text" class="form-control" placeholder="Enter status" value="">
+
+                                           
+
+                                            <select asp-for="Status" class="form-select" name="Status" id="Status">
+                                                <option selected disabled>--Select Status--</option>
+                                                <option value="1">1</option>
+                                                <option value="0">0</option>
+                                            </select>
+
                                             <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
                                         </div>
@@ -206,6 +214,8 @@
                     
                     foreach (var skills in ViewBag.skills)
                     {
+                        if(@skills.DeletedAt == null)
+                        {
                         <tr>
                         
                             <td style="background-color:white">@skills.SkillName</td>
@@ -227,7 +237,7 @@
                     }
                 }
 }
-
+}
 
             </table>
 
@@ -264,9 +274,17 @@
                                         </div>
                                         <br />
 
-                                        <div>
+                                       <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
-                                            <input asp-for="Status" id="StatusEdit" type="text" class="form-control" placeholder="Enter status" value="">
+
+                                           
+
+                                            <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
+                                                <option selected disabled>--Select Status--</option>
+                                                <option value="1">1</option>
+                                                <option value="0">0</option>
+                                            </select>
+
                                             <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
                                         </div>
