--- a/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/EditProfile.cshtml
@@ -3,6 +3,7 @@
 *@
 @{
 }
+
 @model CIPlatform.Entities.Models.ChangePassUserModel
 
 
@@ -61,18 +62,31 @@
     <div class="container-fluid">
 
 
-        <nav class="navbar navbar-expand-md navbar-light ">
+        
+
+                    
+                        @{
+                            var alldata = ViewBag.data;
+                            for (int i = 0; i < alldata.Count; i++)
+                            {
+                                if (alldata[i].FirstName != null && alldata[i].LastName != null && alldata[i].CityId != 0 && alldata[i].CountryId != 0)
+                                {
+                                    <nav class="navbar navbar-expand-md navbar-light ">
 
             <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <span class="navbar-toggler-icon"></span> 
             </button>
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
 
-                    <li class="nav-item stories">
+                                     <li class="nav-item stories">
+                                    <a class="nav-link" asp-action="PlatformLandingPage" asp-controller="Home">Home</a>
+                                    </li>
+
+                                    <li class="nav-item stories">
                         <a class="nav-link" asp-action="StoryListing" asp-controller="Home">Stories</a>
                     </li>
                     <li class="nav-item dropdown">
@@ -91,10 +105,7 @@
 
 
                     </li>
-
-
-
-                </ul>
+                    </ul>
                 <div class="nav-item dropdown" style="margin-right:15%; width:auto;">
                     <a class="nav-link" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: grey; ">
 
@@ -115,7 +126,32 @@
 
             </div>
         </nav>
-        <hr>
+         <hr>
+         <br />
+         <div id="profilealert">
+         <i class="fa fa-check-circle alert alert-success" style="font-size:28px;color:green; text-align:center; align-content:center;">&nbsp;&nbsp;Your profile is ready</i>
+         </div>
+         <br />
+                                }
+                                else
+                                {
+                                    <br />
+                                    
+                                    <i class='fas fa-exclamation-triangle alert alert-danger' style='font-size:28px;color:red; text-align:center; align-content:center; margin-left:45%;'>&nbsp;&nbsp; Incomplete Profile</i>
+                                    
+                                    <br /><br />
+                                }
+                            }
+
+                         }
+                    
+
+                    
+
+
+
+                
+       
 
     </div>
 </header>
@@ -295,7 +331,7 @@
                                 <div class="col-6">
                                     <label asp-for="country" class="form-label">Country</label>
                                     <br>
-                                    <!-- Example single danger button -->
+                                   
 
                                     <select asp-for="country" name="country" id="selectitm" onchange="countrychange()" style="border:1px solid #D9D9D9 ; width:100% ;height :40px">
                                         @{
@@ -600,6 +636,11 @@
         }
     </script>
 
+     <script type="text/javascript">
+      setTimeout(function(){ 
+       $("#profilealert").hide();
+}, 5000);
+   </script>
 
 </body>
 </html>
