--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Mission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Mission.cshtml
@@ -1,1 +1,196 @@
-﻿
+﻿@{
+    Layout = null;
+}
+
+@model CIPlatform.Entities.Models.AdminMissionVM
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Mission</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
+    @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="~/css/adminmission.css" />
+  @*  <link rel="stylesheet" href="~/css/admin_user.css" />*@
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+   
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+
+
+ 
+</head>
+
+
+<body>
+    <div class="wrapper">
+        <!-- Sidebar -->
+      <nav id="sidebar" class="collapse-sidebar">
+        <div class="sidebar-header">
+            <button type="button" id="sidebarCollapse" class="show-sidebar"><i class="fa fa-bars" aria-hidden="true"></i></button>
+        </div>
+        <ul class="list-unstyled">
+            <li>
+                <a asp-action="Admin_user" asp-controller="Home">
+                    <i class="fa fa-user" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>User</span>
+                </a>
+            </li>
+            <li>
+                <a asp-action="CMSPage" asp-controller="Home">
+                    <i class="fa-regular fa-file-lines" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>CMS Page</span>
+                </a>
+            </li>
+            <li>
+                <a asp-action="Admin_Mission" asp-controller="Home">
+                    <i class="fa-solid fa-bullseye" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>Mission</span>
+                </a>
+            </li>
+            <li>
+                <a asp-action="Admin_MissionTheme" asp-controller="Home">
+                    <i class="fa-solid fa-box" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>Mission Theme</span>
+                </a>
+            </li>
+            <li>
+                <a asp-action="Admin_Skills" asp-controller="Home">
+                    <i class="fa-solid fa-screwdriver-wrench" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>Mission Skill</span>
+                </a>
+            </li>
+            <li>
+                <a asp-action="Admin_MissionApp" asp-controller="Home">
+                    <i class="fa-solid fa-folder-closed" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>Mission Application</span>
+                </a>
+            </li>
+            <li>
+                <a asp-action="Admin_Story" asp-controller="Home">
+                    <i class="fa-solid fa-book-bookmark" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>Story</span>
+                </a>
+            </li>
+            <li>
+                <a asp-action="BannerManagementpage" asp-controller="Admin">
+                    <i class="fa-solid fa-spinner" aria-hidden="true"></i>
+                    <span class='sidebar-menu-text'>Banner Management</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+        <!-- Page Content -->
+        <div id="layout-admin">
+            <div class="header">
+                <div class="d-flex justify-content-between">
+                    <div class="DateAndTime">
+                        @{
+                            string formattedDate = DateTime.Now.ToString("dddd, MMMM d, yyyy, h:mm tt");
+                        }
+                        <span id="current-time">@formattedDate</span>
+                    </div>
+                    <div class="user">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+
+                                    <img class="userimg" src="~/images/BlankProfile3.png">
+
+
+
+
+                                    <span style="margin-left:0.5rem;">User Name</span>
+
+
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#">Action</a></li>
+                                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" asp-action="LoginPage" asp-controller="User">Logout</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div id="content-admin" class="content-admin">
+                <h1>Mission</h1>
+                <hr />
+                <div class="col-6">
+
+                    <!-- Button trigger modal -->
+                   
+
+                    <a asp-action="AdminAddMission" asp-controller="Home">
+                        <button type="button" class="btn add-hours" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                            <i class="fa-solid fa-plus" style="color: #f88634;"></i>
+                            Add
+                        </button>
+                    </a>
+
+
+               
+
+                </div>
+
+                <br />
+                <table style="background-color:white" id="table_id" class="display" data-order='[[ 1, "asc" ]]' data-page-length='25' d>
+                    <thead>
+                        <tr>
+                            <th>Mission Title</th>
+                            <th>Mission Type</th>
+                            <th>Start Date</th>
+                            <th>End Date</th>
+                            <th data-class-name="priority">Action</th>
+                        </tr>
+                    </thead>
+                    @{
+                        foreach (var mission in ViewBag.missionlist)
+                        {
+                            <tr>
+                                <td style="background-color:white">@mission.Title</td>
+                                <td style="background-color:white">@mission.MissionType</td>
+                                <td>@mission.StartDate</td>
+                                <td>@mission.EndDate</td>
+
+
+                                <td>
+
+                                    <i onclick="deletemission(@mission.MissionId)" class="fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
+
+                                    <a asp-action="AdminEditMission" asp-controller="Home" asp-route-id="@mission.MissionId">
+                                    <i class="fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger"></i>
+                                    </a>
+                                </td>
+
+                            </tr>
+                        }
+                    }
+
+
+
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <script src="~/js/adminMission.js">
+
+
+    </script>
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+</body>         
