--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_user.cshtml
@@ -13,24 +13,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
     @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="~/css/admin_user.css" />
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-   
+
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" accesskey=""
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
- 
 </head>
 
 
@@ -151,7 +154,7 @@
                                     <h5 class="modal-title" id="exampleModalLabel">Please input below User Details</h5>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
-                                <form id="myform" asp-action="Admin_user" asp-controller="Home" method="post">
+                                <form id="myform" asp-action="AddAdminuser" asp-controller="Home" method="post">
                                     <div class="modal-body">
 
 
@@ -200,22 +203,46 @@
                                         <br />
 
                                         <div>
-                                            <label asp-for="CityId" for="CityId" class="form-label">City ID</label>
-                                            <input asp-for="CityId" id="CityId" type="number" class="form-control" placeholder="Enter user's City Id" value="">
-                                            <span asp-validation-for="CityId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+                                            <label asp-for="CountryId" class="form-label">Country</label>
+                                            <br>
+
+
+                                            <select asp-for="CountryId" name="country" id="selectitm" onchange="countrychange()" style="border:1px solid #D9D9D9 ; width:100% ;height :40px">
+                                                @{
+                                                    <option selected disabled>Select Country</option>
+                                                    if (ViewBag.countrylist != null)
+                                                    {
+                                                        foreach (var a in ViewBag.countrylist)
+                                                        {
+
+                                                            <option id="@a.CountryId" value="@a.CountryId">@a.Name</option>
+                                                        }
+                                                    }
+                                                }
+                                            </select>
+                                            <span asp-validation-for="CountryId" class="text-danger" style="font-size:12px;"></span>
 
                                         </div>
-
                                         <br />
-
                                         <div>
-                                            <label asp-for="CountryId" for="CountryId" class="form-label">Country ID</label>
-                                            <input asp-for="CountryId" id="CountryId" type="number" class="form-control" placeholder="Enter user's Country Id" value="">
-                                            <span asp-validation-for="CountryId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                                            <label asp-for="CityId" class="form-label">City</label>
+                                            <br>
+                                            <select asp-for="CityId" id="selectcty" style="border:1px solid #D9D9D9 ; width:100% ;height :40px" onchange="citychange()">
+                                                @{
+
+                                                    <option style="color:#757575" class="defaultname">
+                                                        Please select your country
+                                                    </option>
+
+
+                                                }
+                                            </select>
+                                            <span asp-validation-for="CityId" class="text-danger" style="font-size:12px;"></span>
+
 
                                         </div>
                                         <br />
-
                                         <div>
                                             <label for="empid" class="form-label">Employee ID</label>
                                             <input id="empid" type="number" class="form-control" placeholder="Enter user's Employee Id" value="">
@@ -237,17 +264,25 @@
 
                                         <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
-                                            <input asp-for="Status" id="Status" type="text" class="form-control" placeholder="Enter user's status" value="">
+
+
+
+                                            <select asp-for="Status" class="form-select" name="Status" id="Status">
+                                                <option selected disabled>--Select Status--</option>
+                                                <option value="Active">Active</option>
+                                                <option value="In-Active">In-Active</option>
+                                            </select>
+
                                             <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
                                         </div>
-
+                                         <div class="modal-footer">
+                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                                    <button type="submit" class="btn save-btn">Save</button>
+                                </div>
                                     </div>
                                 </form>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn" onclick="saveAdminUserData()">Save</button>
-                                </div>
+                               
                             </div>
                         </div>
                     </div>
@@ -274,15 +309,15 @@
                     foreach (var user in ViewBag.users)
                     {
                         <tr>
-                            <td >@user.FirstName</td>
-                            <td >@user.LastName</td>
-                            <td >@user.Email</td>
-                            <td >@user.EmployeeId</td>
-                            <td >@user.Department</td>
+                            <td>@user.FirstName</td>
+                            <td>@user.LastName</td>
+                            <td>@user.Email</td>
+                            <td>@user.EmployeeId</td>
+                            <td>@user.Department</td>
                             <td style="color: #14C506;">@user.Status</td>
-                            <td >
+                            <td>
 
-                               
+
                                 <!-- Button trigger modal -->
                             <button type="button" class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="UserEditByAdmin" onclick="editAdminUser(@user.UserId)">
                                 </button>
@@ -319,102 +354,136 @@
                 <h5 class="modal-title" id="exampleModalLabelEdit">User Details</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
+            <form method="post" asp-action="SaveUserData" asp-controller="Home">
+                <div class="modal-body">
 
-            <div class="modal-body">
+                    <input asp-for="uid" type="hidden" id="userid" />
 
-                <input type="hidden" id="userid" />
+                    <div>
 
-                <div>
+                        <label asp-for="FirstName" class="form-label">First name</label>
+                        <input asp-for="FirstName" id="FirstNameEdit" type="text" placeholder="Enter user's First Name" class="form-control">
+                        <span asp-validation-for="FirstName" class="text-danger" style="font-size:12px;"></span>
 
-                    <label asp-for="FirstName" class="form-label">First name</label>
-                    <input asp-for="FirstName" id="FirstNameEdit" type="text" placeholder="Enter user's First Name" class="form-control">
-                    <span asp-validation-for="FirstName" class="text-danger" style="font-size:12px;"></span>
+                    </div>
+                    <br />
+                    <div>
+                        <label asp-for="LastName" class="form-label">Last name</label>
+                        <input asp-for="LastName" id="LastNameEdit" type="text" placeholder="Enter user's Last Name" class="form-control">
+                        <span asp-validation-for="LastName" class="text-danger" style="font-size:12px;"></span>
+                    </div>
+                    <br />
 
-                </div>
-                <br />
-                <div>
-                    <label asp-for="LastName" class="form-label">Last name</label>
-                    <input asp-for="LastName" id="LastNameEdit" type="text" placeholder="Enter user's Last Name" class="form-control">
-                    <span asp-validation-for="LastName" class="text-danger" style="font-size:12px;"></span>
-                </div>
-                <br />
+                    <div>
+                        <label asp-for="Email" class="form-label">Email address</label>
+                        <input asp-for="Email" id="EmailEdit" type="email" class="form-control" placeholder="Enter user's Email address">
+                        <span asp-validation-for="Email" class="text-danger" style="font-size:12px;"></span>
+                    </div>
 
-                <div>
-                    <label asp-for="Email" class="form-label">Email address</label>
-                    <input asp-for="Email" id="EmailEdit" type="email" class="form-control" placeholder="Enter user's Email address">
-                    <span asp-validation-for="Email" class="text-danger" style="font-size:12px;"></span>
-                </div>
+                    <br />
 
-                <br />
-
-                <div>
-                    <label asp-for="Password" class="form-label">Password</label>
-                    <input asp-for="Password" id="PasswordEdit" type="password" class="form-control" placeholder="Enter your Password">
-                    <span asp-validation-for="Password" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
-
-
-                </div>
-
-                <br />
-
-                <label class="form-label" for="customFile">Upload user avatar</label>
-                <input type="file" class="form-control" id="customFileEdit" />
-
-                <br />
-
-                <div>
-                    <label asp-for="CityId" for="CityId" class="form-label">City ID</label>
-                    <input asp-for="CityId" id="CityIdEdit" type="number" class="form-control" placeholder="Enter user's City Id" value="">
-                    <span asp-validation-for="CityId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
-
-                </div>
-
-                <br />
-
-                <div>
-                    <label asp-for="CountryId" for="CountryId" class="form-label">Country ID</label>
-                    <input asp-for="CountryId" id="CountryIdEdit" type="number" class="form-control" placeholder="Enter user's Country Id" value="">
-                    <span asp-validation-for="CountryId" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
-
-                </div>
-                <br />
-
-                <div>
-                    <label asp-for="empidEdit" class="form-label">Employee ID</label>
-                    <input asp-for="empidEdit" id="empidEdit" type="number" class="form-control" placeholder="Enter user's Employee Id" value="">
-                    <span asp-validation-for="empidEdit" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
-
-                </div>
-                <br />
-                <div>
-                    <label for="" class="form-label">Department</label>
-                    <input id="deptEdit" type="text" class="form-control" placeholder="Enter user's Department" value="">
-                </div>
-
-                <br />
-                <div>
-                    <label for="profiletxt" class="form-label">Profile Text</label>
-                    <input id="profiletxtEdit" type="text" class="form-control" placeholder="Enter user's Profile Text" value="">
-                </div>
-
-                <br />
+                    <div>
+                        <label asp-for="Password" class="form-label">Password</label>
+                        <input asp-for="Password" id="PasswordEdit" type="password" class="form-control" placeholder="Enter your Password">
+                        <span asp-validation-for="Password" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
 
 
-                <div>
-                    <label asp-for="Status" for="Status" class="form-label">Status</label>
-                    <input asp-for="Status" id="StatusEdit" type="text" class="form-control" placeholder="Enter user's status" value="">
-                    <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                    </div>
 
-                </div>
+                    <br />
 
-            </div>
+                    <label class="form-label" for="customFile">Upload user avatar</label>
+                    <input type="file" class="form-control" id="customFileEdit" />
 
-            <div class="modal-footer">
-                <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                <button type="submit" class="btn save-btn" onclick="saveEditedData()">Save</button>
-            </div>
+                    <br />
+
+                    <div>
+
+                        <label asp-for="CountryId" class="form-label">Country</label>
+                        <br>
+
+
+                        <select asp-for="CountryId" name="country" id="selectitm" onchange="countrychange()" style="border:1px solid #D9D9D9 ; width:100% ;height :40px">
+                            @{
+                                <option selected disabled>Select Country</option>
+                                if (ViewBag.countrylist != null)
+                                {
+                                    foreach (var a in ViewBag.countrylist)
+                                    {
+
+                                        <option id="@a.CountryId" value="@a.CountryId">@a.Name</option>
+                                    }
+                                }
+                            }
+                        </select>
+                        <span asp-validation-for="CountryId" class="text-danger" style="font-size:12px;"></span>
+
+                    </div>
+                    <br />
+                    <div>
+                        <label asp-for="CityId" class="form-label">City</label>
+                        <br>
+                        <select asp-for="CityId" id="selectcty" style="border:1px solid #D9D9D9 ; width:100% ;height :40px" onchange="citychange()">
+                            @{
+
+                                <option style="color:#757575" class="defaultname">
+                                    Please select your country
+                                </option>
+
+
+                            }
+                        </select>
+                        <span asp-validation-for="CityId" class="text-danger" style="font-size:12px;"></span>
+
+
+                    </div>
+                    <br />
+
+                    <div>
+                        <label asp-for="empidEdit" class="form-label">Employee ID</label>
+                        <input asp-for="empidEdit" id="empidEdit" type="number" class="form-control" placeholder="Enter user's Employee Id" value="">
+                        <span asp-validation-for="empidEdit" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+                    </div>
+                    <br />
+                    <div>
+                        <label for="" class="form-label">Department</label>
+                        <input id="deptEdit" type="text" class="form-control" placeholder="Enter user's Department" value="">
+                    </div>
+
+                    <br />
+                    <div>
+                        <label for="profiletxt" class="form-label">Profile Text</label>
+                        <input id="profiletxtEdit" type="text" class="form-control" placeholder="Enter user's Profile Text" value="">
+                    </div>
+
+                    <br />
+
+
+                    <div>
+                        <label asp-for="Status" for="Status" class="form-label">Status</label>
+
+
+
+                        <select asp-for="Status" class="form-select" name="Status" id="Status">
+                            <option selected disabled>--Select Status--</option>
+                            <option value="Active">Active</option>
+                            <option value="In-Active">In-Active</option>
+                        </select>
+
+                        <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+                    </div>
+
+                    <div class="modal-footer">
+                        <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn save-btn">Save</button>
+                    </div>
+            </form>
         </div>
+
     </div>
+</div>
 </div>
 
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
