--- a/MVC/CIPlatform/CIPlatform/Views/Home/LostPass.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/LostPass.cshtml
@@ -22,6 +22,7 @@
 
     <!-- css -->
     <link rel="stylesheet" href="~/css/lostpass.css">
+    <link rel="stylesheet" href="~/css/loginstyle.css">
 
     <!-- Bootstrap links -->
 
@@ -61,32 +62,85 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 crsl-innerimg carousel-img" alt="...">
-                            <div class="carousel-caption d-md-block">
-                                <h1 class="carouselcap-h1">Sed ut perspiciatis unde omnis <br> iste natus
-                                    voluptatem.
-                                </h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                    sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                                    culpa qui officia deserunt mollit anim id est laborum.</p>
-                            </div>
+                            @{
+                                if(ViewBag.bannerdata != null)
+                                {
+                                  foreach(var bannerimg in ViewBag.bannerdata){  
+                                      if(@bannerimg.SortOrder == 1)
+                                      {
+                                <img src="~/NewFolder/@bannerimg.Image" class="d-block w-100 carousel-img" alt="...">
+                                }
+                                }
+                                }
+                                }
+                                <div class="carousel-caption d-md-block">
+                                    <h1>Sed ut perspiciatis unde omnis <br>
+                                        iste natus voluptatem.
+                                    </h1>
+
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
+                                        scelerisque egestas consectetur at, malesuada sit amet tortor.
+                                        Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
+                                        et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
+                                        Curabitur mi urna, congue non eros a, posuere porttitor lectus.
+                                        Proin tincidunt in ipsum ac lacinia. </p>
+                                </div>
+
                         </div>
-                        <div class="carousel-item">
-                            <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                
+                         <div class="carousel-item">
+                                @{
+                                if(ViewBag.bannerdata != null)
+                                {
+                                  foreach(var bannerimg in ViewBag.bannerdata){  
+                                      if(@bannerimg.SortOrder == 3)
+                                      {
+                                <img src="~/NewFolder/@bannerimg.Image" class="d-block w-100 carousel-img" alt="...">
+                                }
+                                }
+                                }
+                                }
+                                <div class="carousel-caption d-md-block">
+                                    <h1>Sed ut perspiciatis unde omnis <br>
+                                        iste natus voluptatem.
+                                    </h1>
+
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
+                                        scelerisque egestas consectetur at, malesuada sit amet tortor.
+                                        Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
+                                        et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
+                                        Curabitur mi urna, congue non eros a, posuere porttitor lectus.
+                                        Proin tincidunt in ipsum ac lacinia. </p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                
+
+                            <div class="carousel-item">
+                                @{
+                                if(ViewBag.bannerdata != null)
+                                {
+                                  foreach(var bannerimg in ViewBag.bannerdata){  
+                                      if(@bannerimg.SortOrder == 2)
+                                      {
+                                <img src="~/NewFolder/@bannerimg.Image" class="d-block w-100 carousel-img" alt="...">
+                                }
+                                }
+                                }
+                                }
+                                <div class="carousel-caption d-md-block">
+                                    <h1>Sed ut perspiciatis unde omnis <br>
+                                        iste natus voluptatem.
+                                    </h1>
+
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
+                                        scelerisque egestas consectetur at, malesuada sit amet tortor.
+                                        Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
+                                        et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
+                                        Curabitur mi urna, congue non eros a, posuere porttitor lectus.
+                                        Proin tincidunt in ipsum ac lacinia. </p>
+                                </div>
                             </div>
-                        </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
@@ -134,8 +188,8 @@
                          </p>
 
                             <div>
-                                <label asp-for="Email" class="form-label">Email address</label>
-                                <input asp-for="Email" type="email" class="form-control" placeholder="Enter your Email address">
+                                <label asp-for="Email" class="form-label" style="margin-left:0%;" >Email address</label>
+                                <input asp-for="Email" type="email" style="margin-left:0%;" class="form-control" placeholder="Enter your Email address">
                                 <span asp-validation-for="Email" class="text-danger" style="font-size:12px;"></span>
                             </div>
                             <br>
@@ -143,7 +197,7 @@
                             <button type="submit" class="btn-login">Reset my password</button>
                             <br><br><br>
 
-                            <a asp-controller="Home"  asp-action="Index" class="lbl-login">Login</a>
+                            <a asp-controller="Home" style="margin-left:50%;" asp-action="Index" class="lbl-login">Login</a>
                         
 
                             <br><br><br><br><br><br><br><br><br><br><br><br>
