--- a/MVC/CIPlatform/CIPlatform/Views/Home/ResetPass.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/ResetPass.cshtml
@@ -45,32 +45,84 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 crsl-innerimg carousel-img" alt="...">
-                            <div class="carousel-caption d-md-block">
-                                <h1 class="carouselcap-h1">Sed ut perspiciatis unde omnis iste natus
-                                    voluptatem.
-                                </h1>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-                                    sed do eiusmod tempor
-                                    incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
-                                    nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                                    fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                                    culpa qui officia deserunt mollit anim id est laborum.</p>
-                            </div>
+                             @{
+                                if(ViewBag.bannerdata != null)
+                                {
+                                  foreach(var bannerimg in ViewBag.bannerdata){  
+                                      if(@bannerimg.SortOrder == 1)
+                                      {
+                                <img src="~/NewFolder/@bannerimg.Image" class="d-block w-100 carousel-img" alt="...">
+                                }
+                                }
+                                }
+                                }
+                                <div class="carousel-caption d-md-block">
+                                    <h1>Sed ut perspiciatis unde omnis <br>
+                                        iste natus voluptatem.
+                                    </h1>
+
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
+                                        scelerisque egestas consectetur at, malesuada sit amet tortor.
+                                        Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
+                                        et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
+                                        Curabitur mi urna, congue non eros a, posuere porttitor lectus.
+                                        Proin tincidunt in ipsum ac lacinia. </p>
+                                </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                
+                                @{
+                                if(ViewBag.bannerdata != null)
+                                {
+                                  foreach(var bannerimg in ViewBag.bannerdata){  
+                                      if(@bannerimg.SortOrder == 3)
+                                      {
+                                <img src="~/NewFolder/@bannerimg.Image" class="d-block w-100 carousel-img" alt="...">
+                                }
+                                }
+                                }
+                                }
+                                <div class="carousel-caption d-md-block">
+                                    <h1>Sed ut perspiciatis unde omnis <br>
+                                        iste natus voluptatem.
+                                    </h1>
+
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
+                                        scelerisque egestas consectetur at, malesuada sit amet tortor.
+                                        Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
+                                        et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
+                                        Curabitur mi urna, congue non eros a, posuere porttitor lectus.
+                                        Proin tincidunt in ipsum ac lacinia. </p>
+                                </div>
                             </div>
-                        </div>
-                        <div class="carousel-item">
-                            <img src="~/NewFolder/carousel-active-login.png" class="d-block w-100 carousel-img" alt="...">
-                            <div class="carousel-caption d-none d-md-block">
-                                
+
+                            <div class="carousel-item">
+                                @{
+                                if(ViewBag.bannerdata != null)
+                                {
+                                  foreach(var bannerimg in ViewBag.bannerdata){  
+                                      if(@bannerimg.SortOrder == 2)
+                                      {
+                                <img src="~/NewFolder/@bannerimg.Image" class="d-block w-100 carousel-img" alt="...">
+                                }
+                                }
+                                }
+                                }
+                                <div class="carousel-caption d-md-block">
+                                    <h1>Sed ut perspiciatis unde omnis <br>
+                                        iste natus voluptatem.
+                                    </h1>
+
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                                        Integer volutpat ante nec mauris dictum consequat. Duis lacus sapien,
+                                        scelerisque egestas consectetur at, malesuada sit amet tortor.
+                                        Aliquam erat volutpat. Morbi in purus id lorem ornare suscipit vel
+                                        et nunc. Proin tincidunt justo sem, sit amet pretium dui semper vitae.
+                                        Curabitur mi urna, congue non eros a, posuere porttitor lectus.
+                                        Proin tincidunt in ipsum ac lacinia. </p>
+                                </div>
                             </div>
-                        </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                         data-bs-slide="prev">
