--- a/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/PlatformLandingPage.cshtml
@@ -77,10 +77,10 @@
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <a class="dropdown-item" href="#">Volunteering</a>
                                 <a class="dropdown-item" href="#">Sponsered</a>
-
+                                </div>
                         </li>
                         <li>
-                            <img src="~/NewFolder/user-img.png" alt="" class="user-avatar">
+                            <img src="data:image;base64,@ViewBag.avatarimg" alt="" class="user-avatar">
                         </li>
 
 
