--- a/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/VolunteeringMission.cshtml
@@ -912,7 +912,7 @@
 
                                 <br>
                                 <br>
-                                <div class="col-12 strylistmaindiv">
+                                <div class="col-12 strylistmaindiv" style=" overflow: scroll;  width: 100%;height: 400px;">
 
 
 
