--- a/MVC/CIPlatform/CIPlatform/Views/Home/AdminAddMission.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/AdminAddMission.cshtml
@@ -13,11 +13,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+
     @* <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>*@
     @*
-    <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
-    <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>*@
+        <script src="http://code.jquery.com/jquery-1.10.2.js"></script>
+        <script src="http://code.jquery.com/ui/1.11.2/jquery-ui.js"></script>*@
 
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,9 +31,9 @@
     <link rel="stylesheet" href="~/css/adminmission.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" accesskey=""
-integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+            integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
     <style>
 
@@ -75,64 +75,64 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
 
 
 <body>
- 
+
     <div class="wrapper">
         <!-- Sidebar -->
         <nav id="sidebar" class="collapse-sidebar">
-        <div class="sidebar-header">
-            <button type="button" id="sidebarCollapse" class="show-sidebar"><i class="fa fa-bars" aria-hidden="true"></i></button>
-        </div>
-        <ul class="list-unstyled">
-            <li>
-                <a asp-action="Admin_user" asp-controller="Home">
-                    <i class="fa fa-user" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>User</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="CMSPage" asp-controller="Home">
-                    <i class="fa-regular fa-file-lines" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>CMS Page</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="Admin_Mission" asp-controller="Home">
-                    <i class="fa-solid fa-bullseye" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>Mission</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="Admin_MissionTheme" asp-controller="Home">
-                    <i class="fa-solid fa-box" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>Mission Theme</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="Admin_Skills" asp-controller="Home">
-                    <i class="fa-solid fa-screwdriver-wrench" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>Mission Skill</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="Admin_MissionApp" asp-controller="Home">
-                    <i class="fa-solid fa-folder-closed" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>Mission Application</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="Admin_Story" asp-controller="Home">
-                    <i class="fa-solid fa-book-bookmark" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>Story</span>
-                </a>
-            </li>
-            <li>
-                <a asp-action="BannerManagementpage" asp-controller="Admin">
-                    <i class="fa-solid fa-spinner" aria-hidden="true"></i>
-                    <span class='sidebar-menu-text'>Banner Management</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
+            <div class="sidebar-header">
+                <button type="button" id="sidebarCollapse" class="show-sidebar"><i class="fa fa-bars" aria-hidden="true"></i></button>
+            </div>
+            <ul class="list-unstyled">
+                <li>
+                    <a asp-action="Admin_user" asp-controller="Home">
+                        <i class="fa fa-user" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>User</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="CMSPage" asp-controller="Home">
+                        <i class="fa-regular fa-file-lines" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>CMS Page</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Admin_Mission" asp-controller="Home">
+                        <i class="fa-solid fa-bullseye" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>Mission</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Admin_MissionTheme" asp-controller="Home">
+                        <i class="fa-solid fa-box" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>Mission Theme</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Admin_Skills" asp-controller="Home">
+                        <i class="fa-solid fa-screwdriver-wrench" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>Mission Skill</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Admin_MissionApp" asp-controller="Home">
+                        <i class="fa-solid fa-folder-closed" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>Mission Application</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="Admin_Story" asp-controller="Home">
+                        <i class="fa-solid fa-book-bookmark" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>Story</span>
+                    </a>
+                </li>
+                <li>
+                    <a asp-action="BannerManagementpage" asp-controller="Admin">
+                        <i class="fa-solid fa-spinner" aria-hidden="true"></i>
+                        <span class='sidebar-menu-text'>Banner Management</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
         <!-- Page Content -->
         <div id="layout-admin">
             <div class="header">
@@ -143,6 +143,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                         }
                         <span id="current-time">@formattedDate</span>
                     </div>
+                    
                     <div class="user">
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
@@ -170,6 +171,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
             </div>
             <div id="content-admin" class="content-admin">
                 <h1>Add Mission</h1>
+
                 <hr />
                 <form id="myform" asp-action="AdminAddMission" asp-controller="Home" method="post" enctype="multipart/form-data">
                     <div class="modal-body">
@@ -199,7 +201,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                             <div class="col-md-4">
                                 <label for="" class="form-label">City</label>
                                 <br>
-                                <select asp-for="CityId"  id="selectcty" style="border:1px solid #D9D9D9 ; width:100% ;height :40px" onchange="citychange()">
+                                <select asp-for="CityId" id="selectcty" style="border:1px solid #D9D9D9 ; width:100% ;height :40px" onchange="citychange()">
                                     @{
 
                                         <option selected disabled style="color:#757575" class="defaultname">
@@ -328,7 +330,7 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
 
                                 </select>
                             </div>
-                         
+
                             <div class="col-3">
 
                                 <label for="images" class="drop-container">
@@ -337,25 +339,26 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
 
                                 </label>
 
-                             
+
                             </div>
 
                             <div class="col-3">
                                 <span>Select Documents</span>
                                 <label for="images" class="drop-container">
 
-                                    <input  type="file" multiple id="docs" name="DocumentFile" accept=".doc,.docx,.pdf,.xls" required>
+                                    <input type="file" multiple id="docs" name="DocumentFile" accept=".doc,.docx,.pdf,.xls" required>
                                 </label>
                             </div>
 
-                               <div class="col-3">
-                               
-                                    <select class="form-select" name="SelectedValues" multiple="multiple">
-                                    @foreach (var item in ViewBag.skills){
+                            <div class="col-3">
+
+                                <select class="form-select" name="SelectedValues" multiple="multiple">
+                                    @foreach (var item in ViewBag.skills)
+                                    {
                                         <option value="@item.SkillId">@item.SkillName</option>
                                     }
-                                    </select>
-                                    <br />
+                                </select>
+                                <br />
                                 @*<input type="submit" value="Submit" />*@
 
 
@@ -366,8 +369,8 @@ integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="ano
                     </div>
 
                     <div>
-                        <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                        <button type="submit" class="btn submit-btn">Submit</button>
+                        <button type="button" class="btn" data-bs-dismiss="modal">Cancel</button>
+                        <button type="submit" class="btn">Submit</button>
                     </div>
                 </form>
             </div>
