--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_MissionTheme.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_MissionTheme.cshtml
@@ -13,31 +13,37 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
     @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="~/css/admin_user.css" />
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-   
+
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
+     @*for sweet alerts*@
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
 
- 
+
 </head>
 
 
-
+@if (TempData.ContainsKey("DataSavedMessage"))
+{
+<script>alert('@TempData["DataSavedMessage"]');</script>
+}
 <div class="wrapper">
     <!-- Sidebar -->
-   <nav id="sidebar" class="collapse-sidebar">
+    <nav id="sidebar" class="collapse-sidebar">
         <div class="sidebar-header">
             <button type="button" id="sidebarCollapse" class="show-sidebar"><i class="fa fa-bars" aria-hidden="true"></i></button>
         </div>
@@ -129,11 +135,11 @@
         </div>
         <div id="content-admin" class="content-admin">
             <h1>Mission Theme</h1>
+            <br />
+            
             <hr />
             <div class="firstrow">
                 <div class="col-7">
-                    
-
                 </div>
                 <div class="col-6">
 
@@ -155,7 +161,7 @@
                                 <form id="cms-form" asp-action="Admin_AddMTheme" asp-controller="Home" method="post">
                                     <div class="modal-body">
 
-                                        
+
 
                                         <div>
 
@@ -170,7 +176,7 @@
                                         <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
 
-                                           
+
 
                                             <select asp-for="Status" class="form-select" name="Status" id="Status">
                                                 <option selected disabled>--Select Status--</option>
@@ -183,11 +189,11 @@
                                         </div>
 
                                     </div>
-                                
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn">Save</button>
-                                </div>
+
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                                        <button type="submit" class="btn save-btn">Save</button>
+                                    </div>
                                 </form>
                             </div>
                         </div>
@@ -197,55 +203,53 @@
 
             </div>
 
-<br />
+            <br />
 
             <table style="background-color:white; width:100%;" id="table_id" class="display" data-order='[[ 1, "asc" ]]' data-page-length='25' d>
                 <thead>
                     <tr>
-                        
+
                         <th>Title</th>
-                       <th style="text-align:center;">Status</th>
-                       
+                        <th style="text-align:center;">Status</th>
+
                         <th data-class-name="priority">Action</th>
                     </tr>
                 </thead>
                 @{
-                    if(ViewBag.missionTh != null)
+                    if (ViewBag.missionTh != null)
                     {
-                        
-                    
-                    foreach (var mt in ViewBag.missionTh)
-                    {
-                        if(@mt.DeletedAt == null)
+
+
+                        foreach (var mt in ViewBag.missionTh)
                         {
+                            if (@mt.DeletedAt == null)
+                            {
 
-                        <tr>
-                        
-                            <td style="background-color:white">@mt.Title</td>
-                            <td style="background-color:white; color: #14C506; text-align:center;">@mt.Status</td>
-                           
-                            <td style="background-color:white">
+                                <tr>
 
+                                    <td style="background-color:white">@mt.Title</td>
+                                    <td style="background-color:white; color: #14C506; text-align:center;">@mt.Status</td>
 
-                             <!-- Button trigger modal -->
-                    <button type="button"  class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="CMSEditByAdmin" onclick="editMTData(@mt.MissionThemeId)">
-                        
-                     
-                    </button>
-                 
-                    
-                                <i type="button" onclick="deleteMTData(@mt.MissionThemeId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
+                                    <td style="background-color:white">
 
 
+                                        <!-- Button trigger modal -->
+                            <button type="button" class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="CMSEditByAdmin" onclick="editMTData(@mt.MissionThemeId)">
+                                        </button>
 
 
-                            </td>
+                                        <i type="button" onclick="deleteMTData(@mt.MissionThemeId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
 
-                        </tr>
+
+
+
+                                    </td>
+
+                                </tr>
+                            }
+                        }
                     }
                 }
-}
-}
 
 
             </table>
@@ -258,57 +262,59 @@
 </div>
 
 
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModalMT" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabelEdit">User Details</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalMT" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabelEdit">User Details</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
-                                    <div class="modal-body">
+            <div class="modal-body">
 
-                                   <input type="hidden" id="MissionThemeId" asp-for="MissionThemeId"/>
-
-                                        
-                                        <div>
-
-                                            <label asp-for="Title" class="form-label">Title</label>
-                                            <input asp-for="Title" id="TitleEdit" type="text" placeholder="Enter Theme" class="form-control">
-                                            <span asp-validation-for="Title" class="text-danger" style="font-size:12px;"></span>
+                <input type="hidden" id="MissionThemeId" asp-for="MissionThemeId" />
 
 
-                                        </div>
-                                        <br />
+                <div>
 
-                                        <div>
-                                            <label asp-for="Status" for="Status" class="form-label">Status</label>
+                    <label asp-for="Title" class="form-label">Title</label>
+                    <input asp-for="Title" id="TitleEdit" type="text" placeholder="Enter Theme" class="form-control">
+                    <span asp-validation-for="Title" class="text-danger" style="font-size:12px;"></span>
 
-                                           
 
-                                            <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
-                                                <option selected disabled>--Select Status--</option>
-                                                <option value="1">1</option>
-                                                <option value="0">0</option>
-                                            </select>
+                </div>
+                <br />
 
-                                            <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                <div>
+                    <label asp-for="Status" for="Status" class="form-label">Status</label>
 
-                                        </div>
-                                    
-                               
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn" onclick="saveEditedMTData()">Save</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                   
-<script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 
-<script src="~/js/admin_mtheme.js"></script>
+
+                    <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
+                        <option selected disabled>--Select Status--</option>
+                        <option value="1">1</option>
+                        <option value="0">0</option>
+                    </select>
+
+                    <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+                </div>
+
+
+                <div class="modal-footer">
+                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                    <button type="submit" class="btn save-btn" onclick="saveEditedMTData()">Save</button>
+                  
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+
+    <script src="~/js/admin_mtheme.js"></script>
 
 
 
