--- a/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/Admin_Skills.cshtml
@@ -13,24 +13,27 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@300&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 
     @*<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>*@
-    
+
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="~/css/admin_user.css" />
-    
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-   
+
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
 
+    @*for sweet alerts*@
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
+    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
 
- 
+
 </head>
 
 
@@ -94,6 +97,7 @@
     </nav>
     <!-- Page Content -->
     <div id="layout-admin">
+    
         <div class="header">
             <div class="d-flex justify-content-between">
                 <div class="DateAndTime">
@@ -132,8 +136,6 @@
             <hr />
             <div class="firstrow">
                 <div class="col-7">
-                    
-
                 </div>
                 <div class="col-6">
 
@@ -168,7 +170,7 @@
                                         <div>
                                             <label asp-for="Status" for="Status" class="form-label">Status</label>
 
-                                           
+
 
                                             <select asp-for="Status" class="form-select" name="Status" id="Status">
                                                 <option selected disabled>--Select Status--</option>
@@ -181,11 +183,12 @@
                                         </div>
 
                                     </div>
-                                
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn">Save</button>
-                                </div>
+
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                                        <button type="submit" class="btn save-btn">Save</button>
+                                    </div>
+                                    
                                 </form>
                             </div>
                         </div>
@@ -195,49 +198,48 @@
 
             </div>
 
-<br />
+            <br />
 
             <table style="background-color:white; width:100%;" id="table_id" class="display" data-order='[[ 1, "asc" ]]' data-page-length='25' d>
                 <thead>
                     <tr>
-                        
+
                         <th>Skills Name</th>
-                       <th style="text-align:center;">Status</th>
-                       
+                        <th style="text-align:center;">Status</th>
+
                         <th data-class-name="priority">Action</th>
                     </tr>
                 </thead>
                 @{
-                    if(ViewBag.skills != null)
+                    if (ViewBag.skills != null)
                     {
-                        
-                    
-                    foreach (var skills in ViewBag.skills)
-                    {
-                        if(@skills.DeletedAt == null)
+
+
+                        foreach (var skills in ViewBag.skills)
                         {
-                        <tr>
-                        
-                            <td style="background-color:white">@skills.SkillName</td>
-                            <td style="background-color:white; color: #14C506; text-align:center;">@skills.Status</td>
-                           
-                            <td style="background-color:white">
+                            if (@skills.DeletedAt == null)
+                            {
+                                <tr>
+
+                                    <td style="background-color:white">@skills.SkillName</td>
+                                    <td style="background-color:white; color: #14C506; text-align:center;">@skills.Status</td>
+
+                                    <td style="background-color:white">
 
 
-                             <!-- Button trigger modal -->
-                    <button type="button"  class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="SkillsEditByAdmin" onclick="editSkillData(@skills.SkillId)">
-                        
-                    </button>
-                 
-                                <i type="button" onclick="deleteSkillData(@skills.SkillId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
+                                        <!-- Button trigger modal -->
+                            <button type="button" class="btn fas fa-edit" style="color: #f88634; margin-left:10px; font-size:larger" id="SkillsEditByAdmin" onclick="editSkillData(@skills.SkillId)">
+                                        </button>
 
-                            </td>
+                                        <i type="button" onclick="deleteSkillData(@skills.SkillId)" class="btn fa fa-trash" style="font-size:larger" aria-hidden="true"></i>
 
-                        </tr>
+                                    </td>
+
+                                </tr>
+                            }
+                        }
                     }
                 }
-}
-}
 
             </table>
 
@@ -249,57 +251,57 @@
 </div>
 
 
-                    <!-- Modal -->
-                    <div class="modal fade" id="exampleModalSkills" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
-                        <div class="modal-dialog modal-dialog-centered modal-lg">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h5 class="modal-title" id="exampleModalLabelEdit">Skills</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                </div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModalSkills" data-bs-backdrop="static" tabindex="-1" aria-labelledby="exampleModalLabelEdit" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabelEdit">Skills</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
 
-                                    <div class="modal-body">
+            <div class="modal-body">
 
-                                   <input type="hidden" id="SkillsId" asp-for="SkillsId"/>
-
-                                        
-                                     
-                                        <div>
-
-                                            <label asp-for="SkillName" class="form-label">Title</label>
-                                            <input asp-for="SkillName" id="SkillNameEdit" type="text" placeholder="Enter Theme" class="form-control">
-                                            <span asp-validation-for="SkillName" class="text-danger" style="font-size:12px;"></span>
+                <input type="hidden" id="SkillsId" asp-for="SkillsId" />
 
 
-                                        </div>
-                                        <br />
 
-                                       <div>
-                                            <label asp-for="Status" for="Status" class="form-label">Status</label>
+                <div>
 
-                                           
+                    <label asp-for="SkillName" class="form-label">Title</label>
+                    <input asp-for="SkillName" id="SkillNameEdit" type="text" placeholder="Enter Theme" class="form-control">
+                    <span asp-validation-for="SkillName" class="text-danger" style="font-size:12px;"></span>
 
-                                            <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
-                                                <option selected disabled>--Select Status--</option>
-                                                <option value="1">1</option>
-                                                <option value="0">0</option>
-                                            </select>
 
-                                            <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+                </div>
+                <br />
 
-                                        </div>
+                <div>
+                    <label asp-for="Status" for="Status" class="form-label">Status</label>
 
-                                    </div>
-                                    
-                               
-                                <div class="modal-footer">
-                                    <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
-                                    <button type="submit" class="btn save-btn" onclick="saveEditedSkillData()">Save</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                   
+
+
+                    <select asp-for="Status" class="form-select" name="Status" id="StatusEdit">
+                        <option selected disabled>--Select Status--</option>
+                        <option value="1">1</option>
+                        <option value="0">0</option>
+                    </select>
+
+                    <span asp-validation-for="Status" class="text-danger" style="font-size:12px;margin-top:-2%;"></span>
+
+                </div>
+
+            </div>
+
+
+            <div class="modal-footer">
+                <button type="button" class="btn cancel-btn" data-bs-dismiss="modal">Cancel</button>
+                <button type="submit" class="btn save-btn" onclick="saveEditedSkillData()">Save</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
 
 <script src="~/js/admin_skills.js"></script>
