--- a/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Home/StoryListing.cshtml
@@ -72,7 +72,7 @@
 
                         </li>
                         <li>
-                            <img src="~/NewFolder/user-img.png" style="align-content:flex-end;" alt="" class="user-avatar">
+                            <img src="data:image;base64,@ViewBag.avatarimg" style="align-content:flex-end;" alt="" class="user-avatar">
                         </li>
 
                      
