--- a/MVC/CIPlatform/CIPlatform/Views/Shared/_List.cshtml
+++ b/MVC/CIPlatform/CIPlatform/Views/Shared/_List.cshtml
@@ -28,265 +28,7 @@
 
 }
         
-           @* @foreach(var item in ViewBag.outputsf)
-            {
-        <div class="card mb-3 lst-row-lst">
-        <div class="row no-gutters">
-        
-
-        <div class="col-md-4">
-
-        <img src="~/NewFolder/lst-img1.png" class="card-img" alt="..." style="margin-bottom: -2%;">
-
-
-
-
-
-
-        <button class="lst-missions">@item.Theme.Title</button>
-
-        
-        </div>
-
-        <div class="col-md-8">
-        <div class="card-body">
-        <h4 class="card-title">@item.Title</h4>
-        <p class="card-text">@item.ShortDescription</p>
-
-        <div class="row">
-
-        <div class="col-sm-6">
-        <div class="txt" style="display: flex;">
-        <span class="card-text" >@item.OrganizationName</span>
-   
-
-                                           <div id="rating" class="col-6 d-flex">
-                                            @{
-                                                if (@ViewBag.Ratingdata.Count == 0)
-                                                {
-                                                        
-                                                   
-                                                    
-                                                    
-                                                        <i  class="rating__star far fa-star star" data-value="1" data-missionid="@item.MissionId"></i>
-                                                        <i  class="rating__star far fa-star star" data-value="2" data-missionid="@item.MissionId"></i>
-                                                        <i  class="rating__star far fa-star star" data-value="3" data-missionid="@item.MissionId"></i>
-                                                        <i class="rating__star far fa-star star" data-value="4" data-missionid="@item.MissionId"></i>
-                                                        <i  class="rating__star far fa-star star" data-value="5" data-missionid="@item.MissionId"></i>
-                                                  
-                                                  
-
-
-                                                }
-
-
-
-
-
-
-                                                else 
-                                                {
-                                                    int i = 0;
-
-                                                    for (i = 0; i < @ViewBag.Ratingdata.Count; i++)
-                                                    {
-                                                    
-                                                        if (@ViewBag.Ratingdata[i].MissionId == @item.MissionId)
-                                                        {
-                                                            int b = Convert.ToInt32(ViewBag.Ratingdata[i].Rating);
-
-
-
-                                                            for (int j = 1; j <=5; j++)
-                                                            {
-
-                                                                if (j <= b)
-                                                                {
-
-                                                                  
-                                                                        <i class="rating__star fas fa-star star" data-value="@j" data-missionid="@item.MissionId"></i>
-                                                                
-                                                                }
-                                                                else
-                                                                {
-                                                                 
-                                                                    <i class="rating__star far fa-star star" data-value="@j" data-missionid="@item.MissionId"></i>
-                                                               
-                                                                }
-
-                                                            }
-                                                            
-
-                                                        }
-
-
-
-
-                                                    }
-
-
-
-
-
-                                                }
-
-                                               
-                                            }
-
-                                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            <div style="margin-top:0.5%;">
-                    
-                @{
-
-                                if (@ViewBag.favlist.Count == 0)
-                                {
-                                    <i onclick="likeMission(@item.MissionId)" class="far fa-heart"></i>
-                                }
-
-                                else
-                                {
-
-                                    var v = ViewBag.favlist;
-
-                                    for (var i = 0; i < v.Count; i++)
-                                    {
-
-                                        if (@ViewBag.favlist[i].MissionId == item.MissionId && @ViewBag.favlist[i].UserId == ViewBag.ids)
-                                        {
-                                            <i onclick="likeMission(@item.MissionId)" style="color:red" class="fas fa-heart"></i>
-                                            break;
-
-                                        }
-
-                                        else
-
-                                        {
-                                            if (i == v.Count - 1)
-                                            {
-                                                <i onclick="likeMission(@item.MissionId)" class="far fa-heart"></i>
-                                            }
-
-                                        }
-
-                                    }
-
-                                }
-
-
-
-                            }
-                            </div>
-                       
-
-</div>
-
-        
-       
-
-        </div>
-         <br>
-       
-
-                                        @{
-
-
-
-
-
-                                var lengths = ViewBag.missionapplication.Count;
-                                for (int k = 0; k < lengths; k++)
-                                {
-                                    if (ViewBag.Missionapplication[k].MissionId == item.MissionId)
-                                    {
-
-                                        <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.MissionId">
-                                            <button type="submit" class="apply-btn" style="margin-left:1%; margin-top:5%;">
-
-                                                View Details <img src="~/NewFolder/right-arrow.png">
-                                            </button>
-                                        </a>
-                                        break;
-                                    }
-                                    else
-                                    {
-                                        if (k == lengths - 1)
-                                        {
-                                            var a = item.EndDate;
-                                            var res = DateTime.Compare(ViewBag.currentDate, item.EndDate);
-                                            if (res == 1)
-                                            {
-                                                <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.MissionId">
-                                                    <button type="submit" class="apply-btn" style="margin-left:1%;  margin-top:5%;">
-
-                                                        View Details <img src="~/NewFolder/right-arrow.png">
-                                                    </button>
-                                                </a>
-                                            }
-                                            else
-                                            {
-                                                <a style="text-decoration: none ; color:#414141" asp-action="VolunteeringMission" asp-controller="Home" asp-route-id="@item.MissionId">
-                                                    <button type="submit" class="apply-btn" style="margin-left:1%;  margin-top:5%;">
-
-                                                        Apply  <img src="~/NewFolder/right-arrow.png">
-                                                    </button>
-                                                </a>
-                                            }
-                                        }
-
-
-                                    }
-
-                                }
-
-
-
-                            }
-        </div>
-
-        <div class=" col-sm-6 ">
-        <button class="lst-btn-date">From @item.StartDate.ToShortDateString() until @item.EndDate.ToShortDateString()</button>
-        <div class="lst-iconandtext" style="display:flex">
-
-        <img class="lst-icons1" src="~/NewFolder/Seats-left.png">
-
-        <div class="lst-hssh">
-        <p class="lst-seatno"><b>@item.Availability</b> </p>
-        <p class="lst-seat">Seats Left</p>
-        </div>
-        <img class="lst-icons" src="~/NewFolder/deadline.png">
-        <div class="lst-hssh">
-
-        <p class="lst-seatno-date"><b>@item.EndDate.ToShortDateString()</b> </p>
-        <p class="lst-seat">Deadline</p>
-        </div>
-        </div>
-        </div>
-
-
-
-
-        </div>
-
-
-
-
-
-        </div>
-        
-        </div>
-        
-        
-
-        </div>
-
-
-
-
-        </div>
-
-
-
-        }*@
+    
   
 <div class="container-fluid">
         @foreach(var item in ViewBag.outputsf)
@@ -296,7 +38,23 @@
     border-radius: 3px;">
   <div class="row no-gutters">
     <div class="col-md-4">
-      <img src="~/NewFolder/lst-img1.png" class="card-img" alt="...">
+      @*<img src="~/NewFolder/lst-img1.png" class="card-img" alt="...">*@
+
+      @{
+
+
+
+                    foreach (var missionimg in ViewBag.missionmedia)
+                    {
+                        if (missionimg.MissionId == item.MissionId)
+                        {
+                            if (@missionimg.Default == "1")
+                            {
+                                <img class="card-img-top" src="data:image/png;base64,@missionimg.MediaPath" />
+                            }
+                        }
+                    }
+                }
 
       <div class="row applydeclinebtn">
           @{
@@ -684,23 +442,14 @@
             </div>
             <div class="col-5" style="margin-left:-10%;">
                  <div class="row" >
-                    <div class="col-6" style="margin-top:5%;">
+                  @*  <div class="col-6" style="margin-top:5%;">
 
                             <div class="card-line">
                                 <button class="btn-date">From  @item.StartDate.ToShortDateString() until @item.EndDate.ToShortDateString()</button>
                             </div>
-                        </div>
-                </div>
-            </div>
-          
-          
-           
-        </div>
-        <div class="row">
-             <div class="col-1">
-                 <div class="row">
+                        </div>*@
 
-                       <div class="col-12" style="text-align: center;">
+                         <div class="col-12" style="text-align: center; margin-top:-5%;">
 
 
 
@@ -759,6 +508,19 @@
 
                             }
                         </div>
+                </div>
+
+
+            </div>
+          
+          
+           
+        </div>
+        <div class="row">
+             <div class="col-1">
+                 <div class="row">
+
+                      
 
                  </div>   
             </div>
